# multiplex-feature-extraction

./: .gitignore  README.md  extract_features_multi_channels.py  extract_features_split_channels.py  kronos.py  marker_metadata.csv  multiplex_config.yaml  multiplex_config_Immunpanel_ML.yaml  multiplex_config_tumorpanel_ML.yaml  pyproject.toml  requirements.txt  run_split_channels_test.py  slides.csv  slurm-41588.out  train_qtif.py
